# Octree

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  Octree.sln  README.md  adaptor.boost.h  adaptor.cgal.h  adaptor.eigen.h  adaptor.glm.h  adaptor.unreal.h  adaptor.xyz.h  octree.h  octree_container.h
.agents/workflows/: rules.md  test.md
.github/workflows/: amalgamate.yml  benchmarks.yml  msbuild.yml
UnitTest/: UnitTest.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters  bitset.arithmetic.tests.cpp  general.tests.cpp  octree.tests.cpp  pch.h  performance.tests.cpp
adaptortests/: adaptortests.vcxproj  adaptortests.vcxproj.filters  pch.h  test.cpp  vcpkg.json
automatic_benchmarks/: CMakeLists.txt
benchmarks/: OrthoTreePointDynamicGeneral.h  benchmarks.cpp  benchmarks.vcxproj  benchmarks.vcxproj.filters
benchmarks/automatic/: CMakeLists.txt  main.cpp
benchmarks/manual/: .clang-tidy  CMakeLists.txt  OrthoTreePointDynamicGeneral.h  benchmarks.cpp  benchmarks.sln  benchmarks.vcxproj  benchmarks.vcxproj.filters  generators.h
cmake/: CPM.cmake  OrthoTreeConfig.cmake.in
dev/bench/: data.js
dev/docs/: bench test  2.txt  benchmark_viewer.html  benchmarks.txt
docs/: README.md  bench test.txt  benchmark_viewer.html  benchmarks.js  benchmarks.txt  ethalon 2025-12-15 5058b3090c8b88e405fe2bfddd6c1c872f2b79d2.txt  ethalon 2026-01-02 (oversized modelspace) 5058b3090c8b88e405fe2bfddd6c1c872f2b79d2.txt  ethalon 2026-01-02 (oversized modelspace, create d10) 5058b3090c8b88e405fe2bfddd6c1c872f2b79d2.txt  report.xlsx
gcc/: CMakeLists.txt
include/octree/: octree.h  octree_container.h
include/octree/adapters/: concepts.h  general.h  glm.h
include/octree/detail/: bitset_arithmetic.h  common.h  grid_space_indexing.h  inplace_vector.h  internal_geometry_module.h  memory_resource.h  morton_space_indexing.h  partitioning.h  undefs.h  zip_view.h
include/orthotree/: bvh.h  octree.h  octree_container.h  octree_managed.h  serialization.h
include/orthotree/adapters/: boost.h  cgal.h  concepts.h  eigen.h  general.h  glm.h  unreal.h  xyz.h
include/orthotree/core/: aliases.h  build_config.h  bvh_aliases.h  bvh_static_linear.h  bvh_static_linear_core.h  configuration.h  entity_adapter.h  ot_aliases.h  ot_base.h  ot_dynamic_hash_core.h  ot_managed.h  ot_query.h  ot_static_linear_core.h  types.h
include/orthotree/detail/: bitset_arithmetic.h  common.h  configuration.h  embedded_resource_pmr_map.h  grid_space_indexing.h  inplace_vector.h  internal_geometry_module.h  memory_resource.h  morton_space_indexing.h  partitioning.h  sequence_view.h  si_grid.h  si_morton.h  si_mortongrid.h  undefs.h  utils.h  zip_view.h
include/orthotree/serialization/: binary_archive.h  (+5 more)
scripts/: amalgamate.py
single_include/: orthotree.h
tests/adaptortests/: adaptortests.sln  adaptortests.vcxproj  adaptortests.vcxproj.filters  packages.config  pch.h  test.cpp  vcpkg-configuration.json
tests/cereal/: CMakeLists.txt  build_log.txt  build_log_utf8.txt  main.cpp  run_test.ps1  vcpkg.json
tests/gcc/: CMakeLists.txt  main.cpp  test_gcc.ps1
tests/serialization_external/: CMakeLists.txt  main.cpp  run_test.ps1  vcpkg.json
tests/unittests/: adapter.tests.cpp  alltests.sln  bvh.tests.cpp  compile_test.h  example.tests.cpp  general.tests.cpp  mr.tests.cpp  packages.config  pch.h  performance.tests.cpp  random.tests.cpp  serialize.tests.cpp  single_header.tests.cpp  test_msvc.ps1  unittests.sln  unittests.vcxproj  unittests.vcxproj.filters
unittests/: .clang-tidy  adapter.tests.cpp  adaptor.tests.cpp  alltests.sln  bitset.arithmetic.tests.cpp  compile.tests.cpp  compile_test.h  example.tests.cpp  general.tests.cpp  packages.config  pch.h  performance.tests.cpp  random.tests.cpp  unittests.vcxproj  unittests.vcxproj.filters  visualizer.natvis
(+14 files in other folders)
